RESOLVED FIXED116467
[Qt][WK2] Fix Mountain Lion builds after r150277.
https://bugs.webkit.org/show_bug.cgi?id=116467
Summary [Qt][WK2] Fix Mountain Lion builds after r150277.
Michael Brüning
Reported 2013-05-20 15:13:12 PDT
SSIA.
Attachments
Patch. (1.28 KB, patch)
2013-05-20 15:19 PDT, Michael Brüning
no flags
Michael Brüning
Comment 1 2013-05-20 15:19:45 PDT
Created attachment 202326 [details] Patch. Attached patch should fix the problem. I can't test this at the moment unfortunately as I do not have access to a recent Mac checkout & build right now.
Michael Brüning
Comment 2 2013-05-21 01:04:40 PDT
*** Bug 116522 has been marked as a duplicate of this bug. ***
Jocelyn Turcotte
Comment 3 2013-05-21 01:59:07 PDT
Comment on attachment 202326 [details] Patch. I believe that this can go in without owner approval, correct me if I'm wrong.
WebKit Commit Bot
Comment 4 2013-05-21 02:04:24 PDT
Comment on attachment 202326 [details] Patch. Clearing flags on attachment: 202326 Committed r150432: <http://trac.webkit.org/changeset/150432>
WebKit Commit Bot
Comment 5 2013-05-21 02:04:27 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 6 2013-05-21 08:25:06 PDT
(In reply to comment #3) > I believe that this can go in without owner approval, correct me if I'm wrong. I think that’s wrong. This WKBase.h file is shipped as a public header on Mac. I don’t think it’s appropriate to have a BUILDING_QT__ #if in it. We probably need a different solution. Anders? Sam?
Michael Brüning
Comment 7 2013-05-21 08:43:13 PDT
(In reply to comment #6) > (In reply to comment #3) > > I believe that this can go in without owner approval, correct me if I'm wrong. > > I think that’s wrong. This WKBase.h file is shipped as a public header on Mac. I don’t think it’s appropriate to have a BUILDING_QT__ #if in it. We probably need a different solution. > > Anders? Sam? Ah, sorry, I was not aware of that. I just assumed the BUILDING_ would be okay since there were both BUILDING_EFL__ and BUILDING_GTK__ #if guards around the efl and GTK specific WKBase header includes in it already. Should we use to PLATFORM(xyz) #ifs or which would be the preferred guard?
Darin Adler
Comment 8 2013-05-21 08:54:39 PDT
(In reply to comment #7) > I just assumed the BUILDING_ would be okay since there were both BUILDING_EFL__ and BUILDING_GTK__ #if guards around the efl and GTK specific WKBase header includes in it already. OK. Probably fine. I still would like to hear from Anders and Sam, but that is good thinking.
Note You need to log in before you can comment on or make changes to this bug.