[Qt][WK2] Fix Mountain Lion builds after r150277. https://bugs.webkit.org/show_bug.cgi?id=116467

Reviewed by Jocelyn Turcotte.

* Shared/API/c/WKBase.h:


Canonical link: https://commits.webkit.org/134839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150432 268f45cc-cd09-0410-ab3c-d52691b4dbfc