Source/WebKit2/Shared/API/c/WKBase.h
@@ -41,7 +41,7 @@
 #include <WebKit2/WKBaseEfl.h>
 #endif
 
-#if defined(__APPLE__)
+#if defined(__APPLE__) && !defined(BUILDING_QT__)
 #include <WebKit2/WKBaseMac.h>
 #endif
 
